@@ -4,7 +4,7 @@ Confdir = $(localstatedir)/lib/ebox/conf
 Conf_DATA = user-eboxlog.conf
 
 Etcdir = $(sysconfdir)/ebox
-Etc_DATA = 80users.conf
+Etc_DATA = 80users.conf ad-sync_ignore.users ad-sync_ignore.groups
 
 EXTRA_DIST = $(Conf_DATA) $(Etc_DATA)
 
