@@ -1,21 +1,0 @@
-#!/bin/sh
-
-which ldapvi > /dev/null
-
-if [ $? -eq 0 ]
-then
-    DN=`sudo perl -e 'use EBox;
-    use EBox::Global;
-    EBox::init();
-    my $usersMod = EBox::Global->modInstance("users");
-    my $mode = $usersMod->model("Mode");
-    print $mode->dn();'`
-
-    echo $DN
-
-    ldapvi -D "cn=ebox,$DN" --bind simple \
-     -w $(sudo cat /var/lib/ebox/conf/ebox-ldap.passwd) -b "$DN"
-else
-    echo "ldapvi not installed, please install it with your favorite package"
-    echo "manager, e.g., apt-get install ldapvi"
-fi
